--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
+    "axios": "^1.8.4",
     "googleapis": "^148.0.0",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
