--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "node-mailjet": "^6.0.8",
     "nodemon": "^3.1.9",
     "redis": "^4.7.0"
   }
