--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
     "googleapis": "^148.0.0",
+    "lucide-react": "^0.541.0",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
