--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@blocknote/mantine": "^0.37.0",
     "@blocknote/react": "^0.37.0",
     "@tailwindcss/vite": "^4.0.17",
+    "@tanstack/react-query": "^5.86.0",
     "axios": "^1.8.4",
     "framer-motion": "^12.23.12",
     "googleapis": "^148.0.0",
