--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
+    "recharts": "^3.2.0",
     "tailwindcss": "^4.0.17"
   },
   "devDependencies": {
